--- a/services/spring-boot-dome-1/pom.xml
+++ b/services/spring-boot-dome-1/pom.xml
@@ -56,6 +56,13 @@
 			<version>1.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-elasticsearch -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+
+		</dependency>
+
 	</dependencies>
 
 	<build>
