--- a/services/spring-boot-dome-1/src/main/resources/application.properties
+++ b/services/spring-boot-dome-1/src/main/resources/application.properties
@@ -46,4 +46,12 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 
 prop.upload-folder=D:/java/uploadFile
- 
+
+
+
+#Elasticsearch
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
+
+
+
