--- a/services/spring-boot-dome-1/pom.xml
+++ b/services/spring-boot-dome-1/pom.xml
@@ -63,6 +63,16 @@
 
 		</dependency>
 
+		<!--rabbitmq-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
