--- a/services/spring-boot-dome-1/src/main/resources/application.properties
+++ b/services/spring-boot-dome-1/src/main/resources/application.properties
@@ -50,8 +50,11 @@ prop.upload-folder=D:/java/uploadFile
 
 
 #Elasticsearch
-spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.cluster-nodes=192.168.1.104:9300
 spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
 
-
-
+#rabbitmq
+spring.rabbitmq.host=192.168.1.104
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=123456
