--- a/services/spring-boot-dome-1/src/main/resources/application.properties
+++ b/services/spring-boot-dome-1/src/main/resources/application.properties
@@ -58,3 +58,15 @@ spring.rabbitmq.host=192.168.1.104
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=123456
+
+
+#开放所有的web Endpoints
+#actuator端口
+management.server.port=9001
+#修改访问路径  2.0之前默认是/   2.0默认是 /actuator  可以通过这个属性值修改
+management.endpoints.web.base-path=/actuator
+#开放所有页面节点  默认只开启了health、info两个节点
+management.endpoints.web.exposure.include=*
+#显示健康具体信息  默认不会显示详细信息
+management.endpoint.health.show-details=always
+management.endpoint.shutdown.enabled=true
