--- a/services/spring-boot-dome-1/pom.xml
+++ b/services/spring-boot-dome-1/pom.xml
@@ -102,7 +102,35 @@
             <version>0.1.17</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/jalopy/jalopy Java格式化-->
+        <dependency>
+            <groupId>jalopy</groupId>
+            <artifactId>jalopy</artifactId>
+            <version>1.5rc3</version>
+        </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>jalopy</groupId>-->
+<!--            <artifactId>com.tjr.jalopy</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/../../lib/jalopy.jar</systemPath>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>jalopy</groupId>-->
+<!--            <artifactId>com.tjr.jalopy-eclipse</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/../../lib/jalopy-eclipse.jar</systemPath>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>jalopy</groupId>-->
+<!--            <artifactId>com.tjr.log4j</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/../../lib/log4j.jar</systemPath>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
